[gd_scene load_steps=17 format=2]

[ext_resource path="res://RainIsoMainContents/MainMusic/PreLayered/Fishy Speciale_pl.ogg" type="AudioStream" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://RainIsoMainContents/Scenes/MandatoryFishingMinigame.gd" type="Script" id=3]
[ext_resource path="res://RainIsoMainContents/Scenes/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/FishingTileset.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Scenes/FishingHook.tscn" type="PackedScene" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/BlankSpace.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Scenes/FishingUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/TheFont.otf" type="DynamicFontData" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/FishSilhouette01.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Resources/FishSilhouette02.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=2]
0/name = "FishingTileset.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
3/name = "FishingTileset.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "FishingTileset.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "FishingTileset.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 32, 256, 160 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 4 ), 510, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 4 ), 507, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 4 ), 255, Vector2( 3, 4 ), 447, Vector2( 4, 1 ), 144, Vector2( 4, 2 ), 146, Vector2( 4, 3 ), 18, Vector2( 5, 1 ), 48, Vector2( 6, 1 ), 56, Vector2( 7, 1 ), 24 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 32, 32 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "BlankSpace.png 6"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 1 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=4]
0/name = "BlankSpace.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="MandatoryFishingMinigame" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.270588, 0.423529, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="CollisionMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 65536, 0, 0, 65576, 0, 0, 131072, 0, 0, 131112, 0, 0, 196608, 0, 0, 196648, 0, 0, 262144, 0, 0, 262184, 0, 0, 327680, 0, 0, 327720, 0, 0, 393216, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 458752, 0, 0, 458779, 0, 0, 524288, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 589824, 0, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0 )

[node name="Fishing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -4.0
bus = "Music"

[node name="Pause" parent="." instance=ExtResource( 4 )]

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]

[node name="FishingUI" parent="." instance=ExtResource( 8 )]

[node name="Fishing" parent="FishingUI" index="0"]
visible = false

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.108
one_shot = true

[node name="FishingTimer" type="Timer" parent="."]

[node name="FishingHook" parent="." instance=ExtResource( 6 )]

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishSilhouette01" type="Sprite" parent="."]
position = Vector2( 267.507, 474.239 )
scale = Vector2( 7, 7 )
texture = ExtResource( 10 )
flip_h = true

[node name="FishSilhouette02" type="Sprite" parent="FishSilhouette01"]
position = Vector2( 104.862, 8.0657 )
scale = Vector2( 1, 1 )
texture = ExtResource( 11 )

[connection signal="done" from="FishingUI" to="." method="_on_FishingUI_done"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="timeout" from="FishingTimer" to="." method="_on_FishingTimer_timeout"]

[editable path="FishingUI"]
[editable path="FishingHook"]
